--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#0099ff</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -12,4 +13,5 @@
     <color name="blue">#0000FF</color>
     <color name="midnighit_blue">#191970</color>
     <color name="sand">#F5F4EF</color>
+    <color name="gradientColor">#E2F1FD</color>
 </resources>
