--- a/app/src/main/res/drawable/round_border.xml
+++ b/app/src/main/res/drawable/round_border.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/green"
-        android:width="1dp"/>
+    <solid android:color="@color/colorPrimary"/>
     <corners android:radius="100dp"/>
-    <solid android:color="@color/midnighit_blue"/>
 </shape>
