--- a/app/src/main/res/layout/choose_third_question.xml
+++ b/app/src/main/res/layout/choose_third_question.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand"
+    android:background="@drawable/background_gradient"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -16,17 +16,24 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/choose_third_question_title"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="25dp"
-                android:gravity="center"
-                android:text="@string/choose_third_question_title"
-                android:textColor="@color/black"
-                android:textColorHint="@color/white"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+                android:layout_marginBottom="40dp"
+                >
+
+                <TextView
+                    android:id="@+id/choose_third_question_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:gravity="center"
+                    android:text="@string/choose_third_question_title"
+                    android:textColor="@color/black"
+                    android:textSize="40sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -35,69 +42,94 @@
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
-
                 <TextView
                     android:id="@+id/choose_third_question_textview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="25dp"
+                    android:fontFamily="@font/baloo"
                     android:gravity="center"
                     android:text="@string/choose_third_question_textview_name"
-                    android:textColor="@color/black"
                     android:textColorHint="@color/white"
                     android:textSize="30sp"
                     android:textStyle="normal" />
 
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:baselineAligned="false"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-
-                <Button
-                    android:id="@+id/button_of_mathQuestion"
-                    android:text="Answer math question"
-                    android:autoSizeTextType="uniform"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/round_border"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="175dp"
                 android:layout_margin="5dp"
-                android:baselineAligned="false"
                 android:gravity="center"
                 android:orientation="horizontal">
 
-
-                <Button
-                    android:id="@+id/button_of_spellingQuestion"
-                    android:text="Answer spelling question"
-                    android:autoSizeTextType="uniform"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/math_card"
+                    android:clickable="true"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_height="match_parent"
                     android:layout_margin="10dp"
-                    android:background="@drawable/round_border"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:layout_weight="1"
+                    app:cardElevation="8dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/math_text_card"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/math_image"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="10dp"
+                            android:fontFamily="@font/aclonica"
+                            android:text="Math"
+                            android:textSize="24sp" />
+
+                        <ImageView
+                            android:id="@+id/math_image"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="15dp"
+                            app:srcCompat="@drawable/ic_calculator" />
+                    </RelativeLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/spelling_card"
+                    android:clickable="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    app:cardElevation="8dp" >
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/spelling_image_card"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="15dp"
+                            app:srcCompat="@drawable/ic_spelling" />
+
+                        <TextView
+                            android:id="@+id/spelling_text_card"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/spelling_image_card"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="10dp"
+                            android:fontFamily="@font/aclonica"
+                            android:text="Spelling"
+                            android:textSize="24sp" />
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
         </LinearLayout>
