--- a/app/src/main/res/layout/information_fragment.xml
+++ b/app/src/main/res/layout/information_fragment.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand"
     android:orientation="vertical"
+    android:background="@drawable/background_gradient"
     tools:ignore="ExtraText">
 
     <ScrollView
@@ -15,17 +15,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/choose_first_question_title"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:gravity="center"
-                android:text="@string/choose_first_question_title"
-                android:textColor="@color/black"
-                android:textSize="40sp"
-                android:textStyle="bold" />
+                android:layout_marginBottom="40dp"
+                >
+
+                <TextView
+                    android:id="@+id/choose_first_question_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:gravity="center"
+                    android:text="@string/choose_first_question_title"
+                    android:textSize="40sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -60,9 +67,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@drawable/round_border"
                     android:layout_margin="10dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_mic_24">
+                    android:src="@drawable/ic_mic_white">
                 </ImageButton>
 
             </LinearLayout>
@@ -100,9 +108,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@drawable/round_border"
                     android:layout_margin="10dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_mic_24">
+                    android:src="@drawable/ic_mic_white">
                 </ImageButton>
 
             </LinearLayout>
@@ -139,9 +148,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@drawable/round_border"
                     android:layout_margin="10dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_mic_24">
+                    android:src="@drawable/ic_mic_white">
                 </ImageButton>
             </LinearLayout>
 
@@ -177,9 +187,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@drawable/round_border"
                     android:layout_margin="10dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_mic_24">
+                    android:src="@drawable/ic_mic_white">
                 </ImageButton>
 
             </LinearLayout>
@@ -216,9 +227,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@drawable/round_border"
                     android:layout_margin="10dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_mic_24">
+                    android:src="@drawable/ic_mic_white">
                 </ImageButton>
 
             </LinearLayout>
@@ -255,9 +267,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@drawable/round_border"
                     android:layout_margin="10dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_mic_24">
+                    android:src="@drawable/ic_mic_white">
                 </ImageButton>
 
             </LinearLayout>
@@ -294,9 +307,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@drawable/round_border"
                     android:layout_margin="10dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_mic_24">
+                    android:src="@drawable/ic_mic_white">
                 </ImageButton>
 
             </LinearLayout>
@@ -332,9 +346,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@drawable/round_border"
                     android:layout_margin="10dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_mic_24">
+                    android:src="@drawable/ic_mic_white">
                 </ImageButton>
 
             </LinearLayout>
@@ -370,9 +385,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@drawable/round_border"
                     android:layout_margin="10dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_mic_24">
+                    android:src="@drawable/ic_mic_white">
                 </ImageButton>
 
             </LinearLayout>
@@ -408,9 +424,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="@drawable/round_border"
                     android:layout_margin="10dp"
                     android:padding="10dp"
-                    android:src="@drawable/ic_baseline_mic_24">
+                    android:src="@drawable/ic_mic_white">
                 </ImageButton>
 
             </LinearLayout>
@@ -420,8 +437,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/next_Btn"
@@ -434,8 +451,7 @@
                     android:hint="@string/button_next"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
