--- a/app/src/main/res/layout/math_version.xml
+++ b/app/src/main/res/layout/math_version.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand"
+    android:background="@drawable/background_gradient"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -80,8 +80,7 @@
                     android:gravity="center"
                     android:hint="@string/answer_math_voice"
                     android:textSize="20sp"
-                    app:counterEnabled="true"
-                    app:startIconDrawable="@drawable/ic_baseline_mic_24">
+                    app:counterEnabled="true">
 
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -99,17 +98,19 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginTop="0dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+
                     android:layout_gravity="center"
-                    android:layout_margin="20dp"
-                    android:src="@drawable/ic_baseline_mic_24"
+                    android:layout_margin="15dp"
+                    android:background="@drawable/round_border"
+                    android:src="@drawable/ic_mic_white"
                     android:id="@+id/mic_image_btn"/>
 
                 <Button
@@ -123,8 +124,7 @@
                     android:hint="@string/Button_finish_answer_text"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:textSize="20sp" />
 
 
             </LinearLayout>
@@ -134,8 +134,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/next_Btn"
@@ -148,8 +148,7 @@
                     android:hint="@string/button_next"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:textSize="16sp" />
 
 
             </LinearLayout>
