--- a/app/src/main/res/layout/second_question.xml
+++ b/app/src/main/res/layout/second_question.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand"
+    android:background="@drawable/background_gradient"
     android:orientation="vertical">
 
     <ScrollView
@@ -22,7 +22,6 @@
                 android:layout_margin="20dp"
                 android:gravity="center"
                 android:text="@string/title_question_title_name"
-                android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="40sp"
                 android:textStyle="bold" />
@@ -43,7 +42,6 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/second_question_textview_name"
-                    android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="25sp"
                     android:textStyle="bold" />
@@ -60,15 +58,13 @@
 
                 <ImageButton
                     android:id="@+id/image_of_speaker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/round_border"
                     android:src="@drawable/ic_baseline_volume_mute_24"
                     android:gravity="center"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
             <LinearLayout
@@ -83,10 +79,9 @@
                     android:id="@+id/second_question_textview2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
+                    android:layout_margin="15dp"
                     android:gravity="center"
                     android:text="@string/second_question_textview2_name"
-                    android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="25sp"
                     android:textStyle="bold" />
@@ -104,22 +99,21 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="40sp"
+                    android:textSize="35sp"
                     android:text="check"
+                    android:textColor="@color/black"
                     android:id="@+id/check_txt"/>
 
 
 
                 <ImageButton
                     android:id="@+id/image_of_microphone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:src="@drawable/ic_baseline_mic_24"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/ic_mic_white"
                     android:gravity="center"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textSize="20sp"
+                    android:background="@drawable/round_border"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -129,8 +123,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/next_Btn"
@@ -143,8 +137,7 @@
                     android:hint="@string/button_next"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:textSize="16sp" />
 
 
             </LinearLayout>
