--- a/app/src/main/res/layout/spelling_version.xml
+++ b/app/src/main/res/layout/spelling_version.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand"
+    android:background="@drawable/background_gradient"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -43,8 +43,6 @@
                     android:layout_margin="40dp"
                     android:gravity="center"
                     android:text="@string/textView_spellig_version_word"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black"
                     android:textSize="40dp"
                     android:textStyle="bold" />
 
@@ -62,16 +60,13 @@
 
                 <ImageButton
                     android:id="@+id/image_of_microphone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     android:layout_margin="20dp"
+                    android:background="@drawable/round_border"
                     android:gravity="center"
                     android:minHeight="48dp"
-                    android:src="@drawable/ic_baseline_mic_24"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:src="@drawable/ic_mic_white" />
             </LinearLayout>
 
 
@@ -102,8 +97,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/next_Btn"
@@ -116,10 +111,7 @@
                     android:hint="@string/button_next"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
-
-
+                    android:textSize="16sp" />
             </LinearLayout>
 
         </LinearLayout>
