--- a/app/src/main/res/layout/fifth_question.xml
+++ b/app/src/main/res/layout/fifth_question.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand"
+    android:background="@drawable/background_gradient"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -34,9 +34,10 @@
                     android:textStyle="bold" />
             </LinearLayout>
             <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_mic_24"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:background="@drawable/round_border"
+                android:src="@drawable/ic_mic_white"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/fifth_question_mic_btn"/>
 
@@ -111,8 +112,7 @@
                     android:gravity="center"
                     android:hint="@string/answer_math_voice"
                     android:textSize="20sp"
-                    app:counterEnabled="true"
-                    app:startIconDrawable="@drawable/ic_baseline_mic_24">
+                    app:counterEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/input_nameET"
@@ -165,8 +165,7 @@
                     android:gravity="center"
                     android:hint="@string/answer_math_voice"
                     android:textSize="20sp"
-                    app:counterEnabled="true"
-                    app:startIconDrawable="@drawable/ic_baseline_mic_24">
+                    app:counterEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/input_nameET"
@@ -185,8 +184,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/Button_finish_answer"
@@ -199,8 +198,7 @@
                     android:gravity="center"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:textSize="16sp" />
 
 
             </LinearLayout>
@@ -210,8 +208,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/next_Btn"
@@ -224,8 +222,7 @@
                     android:hint="@string/button_next"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:textSize="16sp" />
 
 
             </LinearLayout>
