--- a/app/src/main/res/layout/fourth_question.xml
+++ b/app/src/main/res/layout/fourth_question.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand"
+    android:background="@drawable/background_gradient"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -112,15 +112,12 @@
 
                 <ImageButton
                     android:id="@+id/fourth_question_mic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     android:layout_margin="25dp"
-                    android:src="@drawable/ic_baseline_mic_24"
-                    android:gravity="center"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:background="@drawable/round_border"
+                    android:src="@drawable/ic_mic_white"
+                    android:gravity="center" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -136,8 +133,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/confirm_word_btn"
@@ -150,8 +147,7 @@
                     android:hint="Confirm Word"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/next_Btn"
@@ -164,8 +160,7 @@
                     android:hint="@string/button_next"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:textSize="16sp" />
 
 
             </LinearLayout>
