--- a/app/src/main/res/layout/ninth_question.xml
+++ b/app/src/main/res/layout/ninth_question.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand"
+    android:background="@drawable/background_gradient"
     android:orientation="vertical"
     tools:ignore="ExtraText">
 
@@ -46,9 +46,7 @@
                     android:layout_margin="30dp"
                     android:gravity="center"
                     android:text="enter a sentence"
-                    android:textColor="@color/black"
                     android:drawableStart="@drawable/ic_baseline_volume_up_24"
-                    android:textColorHint="@color/black"
                     android:textSize="30sp"
                     android:textStyle="bold" />
 
@@ -58,7 +56,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:baselineAligned="false"
                 android:orientation="horizontal">
 
@@ -74,8 +72,7 @@
                     android:gravity="center"
                     android:hint="@string/answer_math_voice"
                     android:textSize="20sp"
-                    app:counterEnabled="true"
-                    app:startIconDrawable="@drawable/ic_baseline_mic_24">
+                    app:counterEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/input_nameET"
@@ -92,10 +89,32 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:baselineAligned="false"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/ninth_question_mic_image"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="15dp"
+                    android:background="@drawable/round_border"
+                    android:src="@drawable/ic_mic_white" />
+
+
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/Button_finish_answer"
@@ -108,8 +127,7 @@
                     android:hint="@string/Button_finish_answer_text"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="20sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:textSize="20sp" />
 
 
             </LinearLayout>
@@ -119,8 +137,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/next_Btn"
@@ -133,8 +151,7 @@
                     android:hint="@string/button_next"
                     android:padding="10dp"
                     android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/midnighit_blue" />
+                    android:textSize="16sp" />
 
 
             </LinearLayout>
