--- a/app/src/main/res/layout/tenth_question.xml
+++ b/app/src/main/res/layout/tenth_question.xml
@@ -4,13 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sand">
+    android:background="@drawable/background_gradient">
 
     <LinearLayout
+        android:id="@+id/pic_10layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/pic_10layout">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tenth_question_title"
@@ -21,18 +21,31 @@
             android:text="tenth question"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:textSize="35sp"/>
+            android:textSize="35sp" />
 
-        <ImageView
-            android:id="@+id/tenth_question_ImageView"
-            android:layout_gravity="center"
-            android:layout_width="194dp"
-            android:layout_height="197dp"
-            android:src="@drawable/tenth_question"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"
+            app:cardElevation="8dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/tenth_question_ImageView"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/tenth_question"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
     <RelativeLayout
@@ -44,7 +57,13 @@
         <com.example.minimental.Painter
             android:id="@+id/painter_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@color/white"
+            android:elevation="10dp"/>
     </RelativeLayout>
 
     <LinearLayout
@@ -67,8 +86,7 @@
             android:hint="@string/button_next"
             android:padding="10dp"
             android:textColorHint="@color/white"
-            android:textSize="16sp"
-            app:backgroundTint="@color/midnighit_blue" />
+            android:textSize="16sp" />
 
     </LinearLayout>
 
