--- a/app/src/main/res/layout/collect_missingdetails.xml
+++ b/app/src/main/res/layout/collect_missingdetails.xml
@@ -68,9 +68,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
-                    android:background="@drawable/round_border"
+                    android:background="@null"
                     android:padding="10dp"
-                    android:src="@drawable/ic_mic_white"></ImageButton>
+                    android:src="@drawable/ic_microphone"></ImageButton>
 
             </LinearLayout>
 
@@ -109,9 +109,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
-                    android:background="@drawable/round_border"
+                    android:background="@null"
                     android:padding="10dp"
-                    android:src="@drawable/ic_mic_white"></ImageButton>
+                    android:src="@drawable/ic_microphone"></ImageButton>
 
             </LinearLayout>
 
@@ -149,9 +149,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
-                    android:background="@drawable/round_border"
+                    android:background="@null"
                     android:padding="10dp"
-                    android:src="@drawable/ic_mic_white"></ImageButton>
+                    android:src="@drawable/ic_microphone"></ImageButton>
 
             </LinearLayout>
 
@@ -190,9 +190,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
-                    android:background="@drawable/round_border"
+                    android:background="@null"
                     android:padding="10dp"
-                    android:src="@drawable/ic_mic_white"></ImageButton>
+                    android:src="@drawable/ic_microphone"></ImageButton>
             </LinearLayout>
 
             <LinearLayout
@@ -229,12 +229,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
-                    android:background="@drawable/round_border"
+                    android:background="@null"
                     android:padding="10dp"
-                    android:src="@drawable/ic_mic_white"></ImageButton>
+                    android:src="@drawable/ic_microphone"></ImageButton>
 
             </LinearLayout>
-
 
 
             <LinearLayout
