--- a/app/src/main/res/layout/fifth_question.xml
+++ b/app/src/main/res/layout/fifth_question.xml
@@ -33,13 +33,14 @@
                     android:textSize="40sp"
                     android:textStyle="bold" />
             </LinearLayout>
+
             <ImageButton
+                android:id="@+id/fifth_question_mic_btn"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:background="@drawable/round_border"
-                android:src="@drawable/ic_mic_white"
                 android:layout_gravity="center_horizontal"
-                android:id="@+id/fifth_question_mic_btn"/>
+                android:background="@null"
+                android:src="@drawable/ic_microphone2" />
 
             <TextView
                 android:layout_width="wrap_content"
