--- a/app/src/main/res/layout/fourth_question.xml
+++ b/app/src/main/res/layout/fourth_question.xml
@@ -58,16 +58,17 @@
                 android:orientation="horizontal">
 
 
-                <ImageButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/image_of_speaker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
                     android:layout_margin="25dp"
-                    android:src="@drawable/ic_baseline_volume_mute_24"
+                    android:drawableEnd="@drawable/ic_speaker"
                     android:gravity="center"
-                    android:textColor="@color/black"
+                    android:text="listen"
+                    android:textColor="@color/white"
                     android:textColorHint="@color/white"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -116,7 +117,7 @@
                     android:layout_height="75dp"
                     android:layout_margin="25dp"
                     android:background="@drawable/round_border"
-                    android:src="@drawable/ic_mic_white"
+                    android:src="@drawable/ic_microphone"
                     android:gravity="center" />
 
                 <TextView
