--- a/app/src/main/res/layout/math_version.xml
+++ b/app/src/main/res/layout/math_version.xml
@@ -23,7 +23,6 @@
                 android:layout_margin="20dp"
                 android:gravity="center"
                 android:text="@string/math_version_name"
-                android:textAllCaps="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/white"
                 android:textSize="40sp"
@@ -52,8 +51,7 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/textView_math_version"
-                    android:textColor="@color/black"
-                    android:drawableStart="@drawable/ic_baseline_volume_up_24"
+                    android:drawableEnd="@drawable/ic_speaker"
                     android:textColorHint="@color/white"
                     android:textSize="40sp"
                     android:textStyle="bold" />
@@ -108,8 +106,8 @@
                     android:layout_height="75dp"
                     android:layout_gravity="center"
                     android:layout_margin="15dp"
-                    android:background="@drawable/round_border"
-                    android:src="@drawable/ic_mic_white"
+                    android:background="@null"
+                    android:src="@drawable/ic_microphone2"
                     android:id="@+id/mic_image_btn"/>
 
                 <Button
