--- a/app/src/main/res/layout/repeat_sentence.xml
+++ b/app/src/main/res/layout/repeat_sentence.xml
@@ -64,9 +64,9 @@
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_margin="10dp"
-                    android:background="@drawable/round_border"
+                    android:background="@null"
                     android:gravity="center"
-                    android:src="@drawable/ic_mic_white"
+                    android:src="@drawable/ic_microphone2"
                     android:textColor="@color/white" />
             </LinearLayout>
 
@@ -96,8 +96,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/next_Btn"
