--- a/app/src/main/res/layout/second_question.xml
+++ b/app/src/main/res/layout/second_question.xml
@@ -56,15 +56,18 @@
                 android:orientation="horizontal">
 
 
-                <ImageButton
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/image_of_speaker"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/round_border"
-                    android:src="@drawable/ic_baseline_volume_mute_24"
+                    android:layout_width="150dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="25dp"
+                    android:drawableEnd="@drawable/ic_speaker"
                     android:gravity="center"
-                    android:textColor="@color/white" />
+                    android:text="listen"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
@@ -111,9 +114,9 @@
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_margin="10dp"
-                    android:src="@drawable/ic_mic_white"
+                    android:src="@drawable/ic_microphone2"
                     android:gravity="center"
-                    android:background="@drawable/round_border"
+                    android:background="@null"
                     android:textStyle="bold" />
             </LinearLayout>
 
