--- a/app/src/main/res/layout/sixth_question.xml
+++ b/app/src/main/res/layout/sixth_question.xml
@@ -43,8 +43,6 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:text="@string/sixth_question_textview_name"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black"
                     android:textSize="30sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -65,7 +63,8 @@
                     android:layout_margin="20dp"
                     android:gravity="center"
                     android:minHeight="48dp"
-                    android:src="@drawable/ic_baseline_volume_mute_24"
+                    android:background="@null"
+                    android:src="@drawable/ic_speaker"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:textSize="20sp"
@@ -108,8 +107,8 @@
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_margin="40dp"
-                    android:background="@drawable/round_border"
-                    android:src="@drawable/ic_mic_white"
+                    android:background="@null"
+                    android:src="@drawable/ic_microphone2"
                     android:gravity="center" />
             </LinearLayout>
 
@@ -119,8 +118,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:orientation="vertical"
-                android:paddingStart="100dp"
-                android:paddingEnd="100dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp">
 
                 <Button
                     android:id="@+id/next_Btn"
