UI updates and Animation buttons

--- a/app/src/main/res/layout/fourth_question.xml
+++ b/app/src/main/res/layout/fourth_question.xml
@@ -116,8 +116,8 @@
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_margin="25dp"
-                    android:background="@drawable/round_border"
-                    android:src="@drawable/ic_microphone"
+                    android:background="@null"
+                    android:src="@drawable/ic_microphone2"
                     android:gravity="center" />
 
                 <TextView
