--- a/app/src/main/res/layout/seventh_question.xml
+++ b/app/src/main/res/layout/seventh_question.xml
@@ -34,30 +34,32 @@
         android:orientation="horizontal">
 
 
-        <ImageButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/image_of_speaker"
-            android:layout_width="50dp"
+            android:layout_width="150dp"
             android:layout_height="50dp"
-            android:layout_margin="20dp"
+            android:layout_margin="25dp"
+            android:drawableEnd="@drawable/ic_speaker"
             android:gravity="center"
-            android:src="@drawable/ic_baseline_volume_up_24"
+            android:text="listen"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:textSize="20sp" />
+            android:textSize="15sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/drag_Screen"
         android:layout_width="match_parent"
         android:background="@color/white"
-        android:layout_margin="2dp"
+        android:layout_margin="10dp"
         android:layout_height="400dp">
 
         <ImageView
             android:id="@+id/seventh_question_ImageView1"
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="200dp"
-            android:src="@drawable/dresser"
+            android:src="@drawable/ic_dresser"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="20sp"
@@ -65,32 +67,31 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/seventh_question_ImageView2"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.525" />
+            app:layout_constraintVertical_bias="0.735" />
 
         <ImageView
             android:id="@+id/seventh_question_ImageView2"
-            android:layout_width="230dp"
-            android:layout_height="230dp"
-            android:src="@drawable/refrigerator"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@drawable/ic_fridge_open"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.027"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.441" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/seventh_question_ImageView_milk"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/milk"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/ic_blue_milk"
             android:textColorHint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.289"
+            app:layout_constraintHorizontal_bias="0.39"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.501" />
+            app:layout_constraintVertical_bias="0.29" />
 
         <ImageView
             android:id="@+id/seventh_question_ImageView4"
@@ -100,10 +101,10 @@
             android:textColorHint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.931"
+            app:layout_constraintHorizontal_bias="0.957"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.359" />
+            app:layout_constraintVertical_bias="0.421" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
