--- a/app/src/main/res/layout/fifth_question.xml
+++ b/app/src/main/res/layout/fifth_question.xml
@@ -66,7 +66,7 @@
                     android:gravity="center"
                     android:text="@string/textView_fifth_question"
                     android:textColor="@color/black"
-                    android:drawableStart="@drawable/ic_baseline_volume_up_24"
+                    android:drawableStart="@drawable/ic_speaker"
                     android:textColorHint="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -85,9 +85,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:src="@mipmap/ic_launcher"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
+                    android:src="@drawable/ic_pencil"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -140,9 +138,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:src="@mipmap/ic_launcher"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
+                    android:src="@drawable/ic_ruler"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
