--- a/app/src/main/res/layout/eighth_question.xml
+++ b/app/src/main/res/layout/eighth_question.xml
@@ -34,12 +34,6 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.444" />
 
-    <com.example.minimental.CustomView.BallsDragView
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:id="@+id/ball_drag_view"
-        android:background="@color/white"
-        />
     <!--<LinearLayout
         android:id="@+id/dragLinearout"
         android:layout_width="match_parent"
@@ -102,6 +96,12 @@
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>-->
+
+    <com.example.minimental.CustomView.BallsDragView
+        android:id="@+id/ball_drag_view"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:background="@color/white" />
 
     <LinearLayout
         android:layout_width="match_parent"
